--- a/As_Demo/app/build.gradle
+++ b/As_Demo/app/build.gradle
@@ -31,10 +31,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+
     //这里没有使用远端compile 这是一个我们自己尝试写的依赖
-    compile project(':libraryUtils')
+//    compile project(':libraryUtils')
     //这是远端依赖
-//    compile 'com.github.yk963307153:Android_technology:V0.0.2'
+    compile 'com.github.yk963307153:Android_technology:V0.0.4'
     //注解框架
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
@@ -57,6 +58,8 @@ dependencies {
     compile 'com.lovedise:permissiongen:0.0.6'
     //SharedPreferences
     compile 'com.scottyab:secure-preferences-lib:0.1.4'
+    //手势滑动返回
     compile project(':swipeback')
+    //刷新
     compile project(':xrefreshView')
 }
