--- a/As_Demo/app/build.gradle
+++ b/As_Demo/app/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     //这里没有使用远端compile 这是一个我们自己尝试写的依赖
-    compile project(':libraryUtils')
+//    compile project(':libraryUtils')
     //这是远端依赖
-//    compile 'com.github.yk963307153:Android_technologys:v0.0.7'
+    compile 'com.github.yk963307153:Android_technologys:v0.0.8'
     //注解框架
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
