--- a/As_Demo/app/src/main/AndroidManifest.xml
+++ b/As_Demo/app/src/main/AndroidManifest.xml
@@ -52,16 +52,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/_AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.AppStart">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.DemoListActivity"/>
+        <activity android:name=".activity.DemoListActivity" />
+        <activity android:name=".activity.MainActivity"/>
     </application>
-
 
 </manifest>
